<resources>
    <string name="app_name">NewsApp</string>
    <string name="api_key">529c25b1d4c84f0f894c809946cf65fb</string>
    <string name="source">source</string>
    <string name="date">date</string>
    <string name="title">title</string>
    <string name="headline">headline</string>
    <string name="no_internet_is_there">No Internet is there</string>
    <string name="try_again">Try Again</string>
</resources>